--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,13 +37,16 @@
     "@nextui-org/theme": "2.2.11",
     "@opencampus/ocid-connect-js": "^1.0.1",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
     "@react-aria/ssr": "3.9.4",
     "@react-aria/visually-hidden": "3.8.12",
+    "@react-three/fiber": "^8.17.10",
     "@tabler/icons-react": "^3.24.0",
+    "@types/three": "^0.170.0",
     "chalk": "^5.3.0",
-    "class-variance-authority": "^0.7.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "~11.1.1",
     "intl-messageformat": "^10.5.0",
@@ -57,6 +60,7 @@
     "react-element-to-jsx-string": "^15.0.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.171.0",
     "web3": "^4.11.1"
   },
   "devDependencies": {
