--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,8 +30,10 @@
     "@nextui-org/kbd": "2.0.34",
     "@nextui-org/link": "2.0.35",
     "@nextui-org/listbox": "2.1.27",
+    "@nextui-org/modal": "^2.0.41",
     "@nextui-org/navbar": "2.0.37",
     "@nextui-org/snippet": "2.0.43",
+    "@nextui-org/spacer": "^2.0.33",
     "@nextui-org/switch": "2.0.34",
     "@nextui-org/system": "2.2.6",
     "@nextui-org/theme": "2.2.11",
