--- a/package.json
+++ b/package.json
@@ -42,14 +42,17 @@
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
+    "@rainbow-me/rainbowkit": "^2.2.1",
     "@react-aria/ssr": "3.9.4",
     "@react-aria/visually-hidden": "3.8.12",
     "@react-three/fiber": "^8.17.10",
     "@tabler/icons-react": "^3.24.0",
+    "@tanstack/react-query": "^5.62.11",
     "@types/three": "^0.170.0",
     "chalk": "^5.3.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "ethers": "^6.13.4",
     "framer-motion": "~11.1.1",
     "intl-messageformat": "^10.5.0",
     "js-cookie": "^3.0.5",
@@ -63,6 +66,8 @@
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.171.0",
+    "viem": "^2.21.59",
+    "wagmi": "^2.14.6",
     "web3": "^4.11.1"
   },
   "devDependencies": {
