--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@nextui-org/system": "2.2.6",
     "@nextui-org/theme": "2.2.11",
     "@opencampus/ocid-connect-js": "^1.0.1",
+    "@prisma/client": "^6.1.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
@@ -90,6 +91,7 @@
     "eslint-plugin-unused-imports": "4.1.4",
     "postcss": "^8",
     "prettier": "3.3.3",
+    "prisma": "^6.1.0",
     "tailwind-variants": "0.1.20",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
