--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@nextui-org/system": "2.2.6",
     "@nextui-org/theme": "2.2.11",
     "@opencampus/ocid-connect-js": "^1.0.1",
+    "@prisma/client": "^6.1.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
@@ -60,6 +61,7 @@
     "lucide-react": "^0.424.0",
     "next": "^14.2.19",
     "next-themes": "^0.2.1",
+    "prisma": "^6.1.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-element-to-jsx-string": "^15.0.0",
